# tlsf-tools

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  BENCHGRAPH.md  CLAUDE.md  LICENSE  README.md  TASKS.md  THIRD_PARTY_NOTICES.md  architecture.md  benchgraph.tsv.30s-full  benchgraph_data.tsv  meson.build  meson.options
.github/: FUNDING.yml
.github/workflows/: cd.yml  ci.yml  release.yml
bench/: baseline.tsv  bench.sh
docker/: Dockerfile  README.md  spot-syntcomp-real  spot-syntcomp-syn
docs/: ROADMAP-gr1-persistence.md
docs/benchgraph/: norm_route_selfcontained.tsv  norm_selfcontained.tsv  norm_sweep.md  norm_sweep.tsv
include/tlsf/: aiger.h  apset.h  arena.h  ast.h  build_info.h  classify.h  cli.h  compose_internal.h  cover.h  decompose.h  decompose.hpp  expand.h  gr.h  gr1_oxidd.h  graph.h  grk_oxidd.h  intern.h  json.h  liveness_class.h  nnf.h  normalize.h  oxidd_common.h  pipeline.h  precheck_unreal.h  print_ltlxba.h  print_tlsf.h  recognize.h  residual.h  residual_plan.h  rewrite.h  safety_oxidd.h  section_pattern.h  simd.h  spec.h  templates.h  templates_internal.h  wl.h
scripts/: benchgraph.py  benchgraph_plots.py  bounded_corpus.py  bounded_synthesis.py  build_oxidd.sh  check_norm_equiv.sh  collect_route_stats.py  compare_ltl_benchmark.py  gcov_summary.py  norm_sweep.py  route_stats_summary.py  solve.sh  summarize_route_stats.py  verify_aiger_ltl.py  wr_route_declines.py
src/: aiger.c  apset.c  arena.c  ast.c  classify.c  cli.c  compose_analysis.c  compose_games.c  compose_internal.h  compose_oxidd.c  compose_route.c  compose_route.h  compose_solve.c  cover.c  decompose.c  decompose_internal.h  expand.c  gr.c  gr1_oxidd.c  graph.c  grk_oxidd.c  intern.c  json.c  liveness_class.c  main_tlsf2ltl.c  main_tlsf2tlsf.c  main_tlsfbenchgraph.c  main_tlsfcompose.c  main_tlsfgraph.c  main_tlsfinfo.c  main_tlsfnorm.c  main_tlsfresidual.c  main_tlsfsolve.c  main_tlsftemplates.c  main_tlsfwl.c  nnf.c  normalize.c  oxidd_common.c  pipeline.c  precheck_unreal.c  (+14 more)
test/: arbiter_simple.tlsf  check.sh  check_contains.sh  check_fail_stderr.sh  check_output_dir.sh  check_output_dir_fail.sh  check_solve_wrapper.sh  check_wl.sh  decompose_cpp.cpp  expect_fail.sh  fake_abssynthe.sh  fake_abssynthe_hang.sh  fake_ltlsynt.sh  fake_ltlsynt_fail_monolithic.sh  simd_check.c
test/cases/: Patterns_GFand_gfand01.ltl  Patterns_GFand_gfand05.ltl  Patterns_Uright_uright02.ltl  Patterns_Uright_uright06.basic.tlsf  Patterns_Uright_uright06.full.ltl  Patterns_Uright_uright06.info  Patterns_Uright_uright06.ltl  Random_Lydia_case_03_50_05.fallback_auto.aag  Random_Lydia_case_03_50_05.ltl  Two-player-Game_Nim_nim_02_System-first_nim_02_02.ltl  aiger_unclassified_atom.aag  aiger_unclassified_atom.abssynthe.aag  aiger_unclassified_atom.compose  aiger_unclassified_atom.tlsf  arbiter1formula.nnfbool.tlsf  arbiter1formula.norm.tlsf  arbiter1formula.split.txt  arbiter1formula.tlsf  arbiter1formula.tmpl_reaction.txt  arbiter1formula.trace.txt  arbiter2.csnf  arbiter2.graph.cons.gsnf  arbiter2.graph.cons.json  arbiter2.graph.dot  arbiter2.graph.gsnf  arbiter2.graph.json  arbiter2.graph.live.tsv  arbiter2.graph.tsv  arbiter2.graph.wl  arbiter2.graph.wltmpl  arbiter2.no_tmpl.txt  arbiter2.tlsf  arbiter2.wl0_basic.txt  arbiter_nomutex.check  arbiter_nomutex.tlsf  arbiter_simple.liveness.ltl  arbiter_simple.ltl  arbiter_simple.safety.ltl  assume_delay_real.abssynthe.aag  assume_delay_real.tlsf  (+324 more)
